fixed dark mode issues with splash page, and changed index_header to contain new things in header

--- a/public/stylesheets/darkstyle.css
+++ b/public/stylesheets/darkstyle.css
@@ -40,6 +40,15 @@ body{
     background-color: rgba(47, 47, 47, 0.82);
     color:white;
 }
+.carousel-caption{
+    color: white;
+    position: relative;
+    left: auto;
+    right: auto;
+}
+.jumbotron{
+    color:black;
+}
 
 .footer {
     position:static;
